# 6dof-ascent-sim

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
docs/: architecture.md  assumptions.md  eu-legal-validation.md  runbook.md  stpa-analysis.md
examples/: run_and_visualize.py
examples/output/: mission_summary.txt
sim/: __init__.py  config.py  main.py
sim/analysis/: __init__.py  postflight.py
sim/core/: __init__.py  integrator.py  reference_frames.py  state.py
sim/dynamics/: __init__.py  flex_body.py  slosh.py
sim/environment/: __init__.py  atmosphere.py  gravity.py  wind.py
sim/gnc/: __init__.py  control.py  guidance.py  navigation.py  sensors.py
sim/montecarlo/: __init__.py  dispatcher.py  dispersions.py  statistics.py
sim/orbital/: __init__.py  decay.py  maneuvers.py  propagator.py
sim/safety/: __init__.py  boundary_enforcer.py  eu_compliance.py  fts.py  health_monitor.py
sim/telemetry/: __init__.py  recorder.py  schemas.py
sim/vehicle/: __init__.py  actuator.py  aerodynamics.py  propulsion.py  staging.py  vehicle.py
tests/: test_atmosphere.py  test_boundary_enforcer.py  test_ekf.py  test_eu_compliance.py  test_flex_slosh.py  test_fts.py  test_gravity.py  test_improvements.py  test_integrator.py  test_orbit_propagator.py  test_reference_frames.py
