[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "6dof-ascent-sim"
version = "0.1.0"
description = "6-DOF launch vehicle ascent simulation with boundary enforcement and EKF navigation"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator - prefer readability for complex conditions
    "SIM102", # nested if - prefer readability for safety-critical logic
    "B023",   # loop variable binding - intentional closure pattern in simulation loop
]

[tool.ruff.lint.isort]
known-first-party = ["sim"]

[tool.setuptools.packages.find]
include = ["sim*"]
