[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "6dof-ascent-sim"
version = "0.1.0"
description = "6-DOF launch vehicle ascent simulation with boundary enforcement and EKF navigation"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
keywords = ["simulation", "6dof", "launch-vehicle", "aerospace", "gnc", "orbital-mechanics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/rmednitzer/6dof-ascent-sim"
Repository = "https://github.com/rmednitzer/6dof-ascent-sim"
Issues = "https://github.com/rmednitzer/6dof-ascent-sim/issues"

[project.scripts]
6dof-sim = "sim.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator - prefer readability for complex conditions
    "SIM102", # nested if - prefer readability for safety-critical logic
    "B023",   # loop variable binding - intentional closure pattern in simulation loop
]

[tool.ruff.lint.isort]
known-first-party = ["sim"]

[tool.setuptools.packages.find]
include = ["sim*"]
